# mrksocket

./: .docker.env  .gitignore  README.md  docker-compose.yml  example.env
chat_app/: Dockerfile  README.md  package-lock.json  package.json
chat_app/config/: nginx.conf
chat_app/src/: App.jsx
chat_app/src/components/chat/: Chat.jsx
chat_app/src/components/header/: Header.jsx
chat_app/src/components/room/: Room.css  Room.jsx
chat_app/src/utils/: Notifications.jsx
chat_service/: Dockerfile  README.md  pyproject.toml
chat_service/config/: run.sh
chat_service/package/: __init__.py  run.py
chat_service/package/app/constants/: general_statuses.py  room_constants.py  topic_statuses.py
chat_service/package/app/handlers/: __init__.py  auth_handler.py  disconnect_handler.py  message_handler.py  room_handler.py
chat_service/package/app/initial_data/: rooms.py  users.py
chat_service/package/app/managers/: base_manager.py
chat_service/package/app/managers/authentication/: authentication_manager.py
chat_service/package/app/managers/rooms/: rooms_manager.py
chat_service/package/app/managers/users/: users_manager.py
chat_service/package/app/services/: __init__.py  base_topic_service.py  topic_add_service.py  topic_discard_service.py  topic_send_service.py
chat_service/package/app/utils/: slugify.py
mrksocket/: Dockerfile  Makefile  README.md  app.js  package-lock.json  package.json
mrksocket/__tests__/: socket.test.js
mrksocket/pubsub/: consumer.js  producer.js
mrksocket/util/: connectionsStore.js  logger.js
mrksocket/websocket/: ws.js
(+7 files in other folders)
